--- a/additional-statistical-info.qmd
+++ b/additional-statistical-info.qmd
@@ -216,11 +216,84 @@ Sw <- 1 # number of cluster switches per time point can be manually set
 ## Determine different fidelity patterns
 
 Fidelity refers to the degree to which an intervention was implemented as it was prescribed or intended. 
-We aim to include different patterns of how fidelity might increase over time to estimate the respective effects on power of the study. To describe hypothetical fidelity patterns of increasing fidelity (slow, linear, fast) different mathematical functions (i.e. logistic, linear and exponential curves) are implemented. By considering different values for the slope parameter we can cover a range of fidelity patterns. The slope parameter ranges form $(0,\infty)$, where a slope parameter near to $0$ indicates a increase far away from a linear (fast increase upper left corner, slow increase right bottom corner curve) and a great slope parameter near to linear. 
+We aim to include different patterns of how fidelity might increase over time to estimate the respective effects on power of the study. To describe hypothetical fidelity patterns of increasing fidelity (slow, linear, fast) different mathematical functions (i.e. logistic, linear and exponential curves) are implemented. By considering different values for the slope parameter we can cover a range of fidelity patterns. The slope parameter ranges form $(0,\infty)$, where a slope parameter near to $0$ indicates a increase far away from a linear (fast increase upper left corner, slow increase right bottom corner curve) and a great slope parameter near to linear (See figure \@ref(fig:fig-pattern) ). 
 
-:::{.rmdwarning}
-Picture???
-:::
+
+```{r patterns, eval=TRUE}
+library(ggplot2)
+library(gridExtra)
+
+#study design
+#############
+#number of measurement
+K<-7  
+#points of time afterintervention
+T.points<-K-1
+
+#parameter Fidelity specification
+###############################
+Fid.T1<-0.2
+Fid.End<-1
+
+####set several slopes of increasing fidelity
+#######################################
+slope.seq<-round(exp(1)^(seq(-2,2,1)),2)
+nr.sl<-length(slope.seq)
+
+####fidelity patterns determined by several slopes within slow and fast increase
+##############################################################################
+res.plot.Patterns<-NULL
+for(sl in slope.seq){
+ res<-fidelitysim::find.Fidelity.log(time.points=T.points, Fid.End, Fid.T1, par.slope=sl)
+ res<-data.frame(res, FUN="log", slope=sl)
+ res.plot.Patterns<-rbind(res.plot.Patterns, res)
+ res<-fidelitysim::find.Fidelity.exp(time.points=T.points, Fid.End, Fid.T1, par.slope=sl)
+ res<-data.frame(res, FUN="exp", slope=sl)
+ res.plot.Patterns<-rbind(res.plot.Patterns, res)
+      
+}
+
+#fidelity pattern for linear increase
+#####################################
+res.lin<-fidelitysim::find.Fidelity.linear(time.points=T.points, Fid.End, Fid.T1)
+res.plot.Patterns<-rbind(res.plot.Patterns, data.frame(res.lin, FUN="linear", slope=1))
+    
+```
+
+```{r fig-pattern, echo=FALSE, fig.cap="Patterns of a fidelity increase (fast, linear or slow) over 6 times points"}
+
+#no need to show the reader, isn't it?
+
+#data.frame for plot
+res.plot.Patterns$slope<-as.factor(res.plot.Patterns$slope)
+res.plot.Patterns<-data.frame(res.plot.Patterns, 
+                              grp=as.factor(with(res.plot.Patterns, paste(FUN, slope,sep=":"))))
+res.plot.Patterns$FUN <- factor(res.plot.Patterns$FUN, levels = c("log"  ,  "linear",  "exp"   ))
+    
+#plot with ggplot2 package
+gg.FidPat<-ggplot(data=res.plot.Patterns, aes(x=time, y=Fidelity.Prozent, #col=FUN, 
+                                                  lty=slope, group=grp)) +
+geom_line()+
+geom_point(aes(shape=FUN))+
+theme_bw()
+
+gg.FidPat+
+labs(shape="Fidelity \nincrease", lty="Level of \nabsolute \ndifference \nto linear", 
+           x="Time points after intervention implementation", y="Fidelity (%)")+
+      #scale_color_discrete(labels=c("fast","slow", "linear"))+
+scale_shape_discrete(labels=c("fast", "linear","slow"))+
+scale_linetype_discrete(labels=rev(1:5))+
+scale_y_continuous(labels=c("Start", 'End'), breaks=c(Fid.T1,Fid.End)*100)
+
+```
+
+
+```{r plotsave, echo=FALSE}
+      
+ff<-"FidelityPatterns.png"
+ggsave(ff, width = 7, height = 10, dpi=300)
+    
+```
 
 For our calculation within the simulation we use then these determined fractional values of intervention effects to define the degree of deviation from 100% implementation within the design matrix.
 Technically 3 functions in the R-package {fidelitysim} provides the implementation of the different patterns of fidelity. To create a corresponding design matrix using the fidelity patterns also a function is provided for each design.
