--- a/additional-statistical-info.qmd
+++ b/additional-statistical-info.qmd
@@ -290,7 +290,7 @@ scale_y_continuous(labels=c("Start", 'End'), breaks=c(Fid.T1,Fid.End)*100)
 
 ```{r plotsave, echo=FALSE}
       
-ff<-"FidelityPatterns.png"
+ff<-"img/FidelityPatterns.png"
 ggsave(ff, width = 7, height = 10, dpi=300)
     
 ```
